# private-legal-assistant

./: .gitignore  README.md  pyproject.toml
legal_assistant/: __main__.py  anonymization.py  app.py  assistant.py  config.py  database.py  logging_formatter.py  sensitive_data_handler.py  utils.py
